Fix vertical alignment of search bar in the header

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -136,6 +136,8 @@
     }
   }
 
+  .navbar-form .form-control { display: inline-block; }
+
   @media (max-width: $grid-float-breakpoint-max) {
 
     .navbar-nav.hidden-xs {
